--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "sweetalert2": "^11.1.2",
+    "sweetalert2-react-content": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
